fixed overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,10 +24,28 @@
   scroll-behavior: smooth;
   scroll-padding-top: 3rem;
 }
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+
+.scale_up {
+  transform: scale(0);
+  display: inline-block;
+  opacity: 0;
 }
+.fade_in {
+  transform: translateY(50px);
+  opacity: 0;
+}
+.rotate_360 {
+  transform-origin: center !important;
+}
+body {
+  width: 100vw;
+  overflow-x: hidden !important;
+}
+html {
+  width: 100vw;
+  overflow-x: hidden !important;
+}
+
 h2 {
   @apply text-2xl my-3;
 }
